# reel

./: .gitignore  Cargo.toml  Eask  README.org  build.rs  flake.nix  justfile  reel-async.el  reel.el  wrapper.h
.github/workflows/: ci.yaml
http_server/: Cargo.toml
http_server/src/: main.rs
src/: client.rs  lib.rs  request.rs
test/: reel-test.el
tests/: test-reel.el
