[package]
name = "reel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.19"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
