[package]
name = "reel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["http_server"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.19"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "multipart", "rustls-tls"] }

[dev-dependencies]
http_server = { path = "./http_server" }
