[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version =  "0.7.7", features = ["http2", "multipart"] }
http-body-util = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
